[package]
name = "minictrl"
version = "0.1.0"
authors = ["Jacob Jenner Rasmussen <jacob@jener.dk>"]
edition = "2018"

[dependencies]
diesel = { version = "=1.4.5", features = ["postgres", "network-address", "r2d2"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
dotenv = "0.11.0"
ipnetwork = ">=0.12.2, <0.17.0" # Must match the version diesel depends on, otherwise the diesel::Expression isn't implemented for ipnetwork::IpNetwork
serde_json = "^1.0.45"
serde = { version = "1.0", features = ["derive"] }
rcon = "0.2.0"
regex = "1"
lazy_static = "1.4.0"
async-trait = "0.1.40"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "^0.1.22"
tracing-subscriber = "^0.2.15"

[dev-dependencies]
assert_approx_eq = "1.1.0"