[package]
name = "minictrl"
version = "0.1.0"
authors = ["Jener Rasmussen <jener@jener.dk>"]
edition = "2018"

[features]
default = []
ci = ["default"]
test_live_rcon = []

[dependencies]
tide = "0.16.0"
tide-sqlx = { version = "0.6.1", features = ["rustls", "postgres"] }
tide-tracing = "0.0.11"
async-std = { version = "1.8.0", features = ["attributes"] }
sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "postgres", "migrate", "ipnetwork", "uuid", "offline"] }
uuid = { version = "*", features = ["v4"] }
serde_json = "^1.0.45"
serde = { version = "1.0", features = ["derive"] }
rcon = "0.2.0"
regex = "1"
lazy_static = "1.4.0"
async-trait = "0.1.40"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
async-graphql = { version = "3.0.34", features = ["tracing", "dataloader", "uuid"] }
async-graphql-tide = "2.9.4"
itertools = "0.10.1"
rand = { version = "0.8.4", default-features = false }
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
assert_approx_eq = "1.1.0"